[package]
name = "s0str"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
chrono = "=0.4.18"
dotenv = "0.15.0"
futures = "0.3.2"
futures-channel = "0.3"
futures-util = "0.3.21"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = "1.0"
serde_json = "1.0"
serde_tuple = "0.5.0"
static_init = "1.0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tracing = "0.1"
tracing-subscriber = "0.3.11"
# local
entity = { path = "entity" }
migration = { path = "migration" }
